Separete data, versioning

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<div id="textarea" class="autocomplete" contenteditable="true"><span class="input"></span></div>
 	<div id="suggestion" class="suggestion"></div><!-- .suggestion -->
-	<script src="autocomplete.js"></script>
+	<script src="data.js"></script>
+	<script src="autocomplete-0.0.1.js"></script>
 </body>
 </html>
