wrapped in a function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<div id="textarea" class="autocomplete" contenteditable="true"><span class="input"></span></div>
 	<div id="suggestion" class="suggestion"></div><!-- .suggestion -->
 	<script src="data.js"></script>
-	<script src="autocomplete-0.0.1.js"></script>
+	<!-- <script src="autocomplete-0.0.1.js"></script> -->
+	<script src="autocomplete.js"></script>
 </body>
 </html>
